--- a/style.css
+++ b/style.css
@@ -154,11 +154,16 @@ ul li:hover {
   font-size: 3.4rem;
   font-weight: 300;
 }
-#weatherRoot .weather_cell1 .weather_inner_cell1 {
+#weatherRoot .weather_cell1 .weather_inner_cell1a {
   grid-column: 1/4;
   grid-row: 1/2;
 }
-#weatherRoot .weather_cell1 .weather_inner_cell2 {
+#weatherRoot .weather_cell1 .weather_inner_cell1b {
+  grid-column: 1/4;
+  grid-row: 1/2;
+  display: none;
+}
+#weatherRoot .weather_cell1 .weather_inner_cell2a {
   grid-column: 1/2;
   grid-row: 2/4;
   margin-bottom: 0px;
@@ -166,11 +171,24 @@ ul li:hover {
   display: grid;
   align-content: center;
 }
-#weatherRoot .weather_cell1 .weather_inner_cell2 img {
+#weatherRoot .weather_cell1 .weather_inner_cell2a img {
   width: 60px;
   height: 60px;
 }
-#weatherRoot .weather_cell1 .weather_inner_cell3 {
+#weatherRoot .weather_cell1 .weather_inner_cell2b {
+  grid-column: 1/2;
+  grid-row: 2/4;
+  margin-bottom: 0px;
+  align-self: center;
+  display: grid;
+  align-content: center;
+  display: none;
+}
+#weatherRoot .weather_cell1 .weather_inner_cell2b img {
+  width: 60px;
+  height: 60px;
+}
+#weatherRoot .weather_cell1 .weather_inner_cell3a {
   grid-column: 2/3;
   grid-row: 2/3;
   border-left: 2px white solid;
@@ -179,6 +197,17 @@ ul li:hover {
   align-content: center;
   height: 30px;
   font-weight: 500;
+}
+#weatherRoot .weather_cell1 .weather_inner_cell3b {
+  grid-column: 2/3;
+  grid-row: 2/3;
+  border-left: 2px white solid;
+  padding-left: 20px;
+  display: grid;
+  align-content: center;
+  height: 30px;
+  font-weight: 500;
+  display: none;
 }
 #weatherRoot .weather_cell1 .weather_inner_cell4 {
   grid-column: 2/3;
@@ -189,10 +218,16 @@ ul li:hover {
   align-content: center;
   height: 30px;
 }
-#weatherRoot .weather_cell1 .weather_inner_cell5 {
+#weatherRoot .weather_cell1 .weather_inner_cell5a {
   align-self: start;
   grid-column: 3/4;
   grid-row: 2/4;
+}
+#weatherRoot .weather_cell1 .weather_inner_cell5b {
+  align-self: start;
+  grid-column: 3/4;
+  grid-row: 2/4;
+  display: none;
 }
 #weatherRoot .weather_cell2 {
   background-color: rgba(81, 92, 129, 0.445);
@@ -205,15 +240,33 @@ ul li:hover {
   align-items: center;
   padding-left: 10px;
 }
-#weatherRoot .weather_cell2 .weather_inner_cell1 {
+#weatherRoot .weather_cell2 .weather_inner_cell1a {
+  display: none;
   grid-column: 1/3;
   grid-row: 1/2;
 }
-#weatherRoot .weather_cell2 .weather_inner_cell2 {
+#weatherRoot .weather_cell2 .weather_inner_cell1b {
+  grid-column: 1/3;
+  grid-row: 1/2;
+}
+#weatherRoot .weather_cell2 .weather_inner_cell2a {
+  grid-column: 1/2;
+  grid-row: 2/4;
+  display: none;
+}
+#weatherRoot .weather_cell2 .weather_inner_cell2b {
   grid-column: 1/2;
   grid-row: 2/4;
 }
-#weatherRoot .weather_cell2 .weather_inner_cell3 {
+#weatherRoot .weather_cell2 .weather_inner_cell3a {
+  grid-column: 2/3;
+  grid-row: 2/3;
+  font-weight: 500;
+  text-align: right;
+  padding-right: 15px;
+  display: none;
+}
+#weatherRoot .weather_cell2 .weather_inner_cell3b {
   grid-column: 2/3;
   grid-row: 2/3;
   font-weight: 500;
@@ -226,7 +279,10 @@ ul li:hover {
   text-align: right;
   padding-right: 15px;
 }
-#weatherRoot .weather_cell2 .weather_inner_cell5 {
+#weatherRoot .weather_cell2 .weather_inner_cell5a {
+  display: none;
+}
+#weatherRoot .weather_cell2 .weather_inner_cell5b {
   display: none;
 }
 #weatherRoot .weather_cell3 {
@@ -240,15 +296,33 @@ ul li:hover {
   align-items: center;
   padding-left: 10px;
 }
-#weatherRoot .weather_cell3 .weather_inner_cell1 {
+#weatherRoot .weather_cell3 .weather_inner_cell1a {
+  grid-column: 1/3;
+  grid-row: 1/2;
+  display: none;
+}
+#weatherRoot .weather_cell3 .weather_inner_cell1b {
   grid-column: 1/3;
   grid-row: 1/2;
 }
-#weatherRoot .weather_cell3 .weather_inner_cell2 {
+#weatherRoot .weather_cell3 .weather_inner_cell2a {
+  grid-column: 1/2;
+  grid-row: 2/4;
+  display: none;
+}
+#weatherRoot .weather_cell3 .weather_inner_cell2b {
   grid-column: 1/2;
   grid-row: 2/4;
 }
-#weatherRoot .weather_cell3 .weather_inner_cell3 {
+#weatherRoot .weather_cell3 .weather_inner_cell3a {
+  grid-column: 2/3;
+  grid-row: 2/3;
+  font-weight: 500;
+  text-align: right;
+  padding-right: 15px;
+  display: none;
+}
+#weatherRoot .weather_cell3 .weather_inner_cell3b {
   grid-column: 2/3;
   grid-row: 2/3;
   font-weight: 500;
@@ -261,7 +335,10 @@ ul li:hover {
   text-align: right;
   padding-right: 15px;
 }
-#weatherRoot .weather_cell3 .weather_inner_cell5 {
+#weatherRoot .weather_cell3 .weather_inner_cell5a {
+  display: none;
+}
+#weatherRoot .weather_cell3 .weather_inner_cell5b {
   display: none;
 }
 #weatherRoot .weather_cell4 {
@@ -275,15 +352,33 @@ ul li:hover {
   align-items: center;
   padding-left: 10px;
 }
-#weatherRoot .weather_cell4 .weather_inner_cell1 {
+#weatherRoot .weather_cell4 .weather_inner_cell1a {
+  grid-column: 1/3;
+  grid-row: 1/2;
+  display: none;
+}
+#weatherRoot .weather_cell4 .weather_inner_cell1b {
   grid-column: 1/3;
   grid-row: 1/2;
 }
-#weatherRoot .weather_cell4 .weather_inner_cell2 {
+#weatherRoot .weather_cell4 .weather_inner_cell2a {
+  grid-column: 1/2;
+  grid-row: 2/4;
+  display: none;
+}
+#weatherRoot .weather_cell4 .weather_inner_cell2b {
   grid-column: 1/2;
   grid-row: 2/4;
 }
-#weatherRoot .weather_cell4 .weather_inner_cell3 {
+#weatherRoot .weather_cell4 .weather_inner_cell3a {
+  grid-column: 2/3;
+  grid-row: 2/3;
+  font-weight: 500;
+  text-align: right;
+  padding-right: 15px;
+  display: none;
+}
+#weatherRoot .weather_cell4 .weather_inner_cell3b {
   grid-column: 2/3;
   grid-row: 2/3;
   font-weight: 500;
@@ -296,7 +391,10 @@ ul li:hover {
   text-align: right;
   padding-right: 15px;
 }
-#weatherRoot .weather_cell4 .weather_inner_cell5 {
+#weatherRoot .weather_cell4 .weather_inner_cell5a {
+  display: none;
+}
+#weatherRoot .weather_cell4 .weather_inner_cell5b {
   display: none;
 }
 #weatherRoot .weather_cell5 {
@@ -310,15 +408,33 @@ ul li:hover {
   align-items: center;
   padding-left: 10px;
 }
-#weatherRoot .weather_cell5 .weather_inner_cell1 {
+#weatherRoot .weather_cell5 .weather_inner_cell1a {
+  grid-column: 1/3;
+  grid-row: 1/2;
+  display: none;
+}
+#weatherRoot .weather_cell5 .weather_inner_cell1b {
   grid-column: 1/3;
   grid-row: 1/2;
 }
-#weatherRoot .weather_cell5 .weather_inner_cell2 {
+#weatherRoot .weather_cell5 .weather_inner_cell2a {
+  grid-column: 1/2;
+  grid-row: 2/4;
+  display: none;
+}
+#weatherRoot .weather_cell5 .weather_inner_cell2b {
   grid-column: 1/2;
   grid-row: 2/4;
 }
-#weatherRoot .weather_cell5 .weather_inner_cell3 {
+#weatherRoot .weather_cell5 .weather_inner_cell3a {
+  grid-column: 2/3;
+  grid-row: 2/3;
+  font-weight: 500;
+  text-align: right;
+  padding-right: 15px;
+  display: none;
+}
+#weatherRoot .weather_cell5 .weather_inner_cell3b {
   grid-column: 2/3;
   grid-row: 2/3;
   font-weight: 500;
@@ -331,7 +447,10 @@ ul li:hover {
   text-align: right;
   padding-right: 15px;
 }
-#weatherRoot .weather_cell5 .weather_inner_cell5 {
+#weatherRoot .weather_cell5 .weather_inner_cell5a {
+  display: none;
+}
+#weatherRoot .weather_cell5 .weather_inner_cell5b {
   display: none;
 }
 #weatherRoot [class*=weather_cell]:hover {
