--- a/style.scss
+++ b/style.scss
@@ -148,11 +148,16 @@ ul li:hover {
     padding-left: 10px;
     font-size: 3.4rem;
     font-weight: 300;
-    .weather_inner_cell1 {
+    .weather_inner_cell1a {
       grid-column: 1/4;
       grid-row: 1/2;
     }
-    .weather_inner_cell2 {
+    .weather_inner_cell1b {
+      grid-column: 1/4;
+      grid-row: 1/2;
+      display: none;
+    }
+    .weather_inner_cell2a {
       grid-column: 1/2;
       grid-row: 2/4;
       margin-bottom: 0px;
@@ -164,7 +169,20 @@ ul li:hover {
         height: 60px;
       }
     }
-    .weather_inner_cell3 {
+    .weather_inner_cell2b {
+      grid-column: 1/2;
+      grid-row: 2/4;
+      margin-bottom: 0px;
+      align-self: center;
+      display: grid;
+      align-content: center;
+      display: none;
+      img {
+        width: 60px;
+        height: 60px;
+      }
+    }
+    .weather_inner_cell3a {
       grid-column: 2/3;
       grid-row: 2/3;
       border-left: 2px white solid;
@@ -173,6 +191,17 @@ ul li:hover {
       align-content: center;
       height: 30px;
       font-weight: 500;
+    }
+    .weather_inner_cell3b {
+      grid-column: 2/3;
+      grid-row: 2/3;
+      border-left: 2px white solid;
+      padding-left: 20px;
+      display: grid;
+      align-content: center;
+      height: 30px;
+      font-weight: 500;
+      display: none;
     }
     .weather_inner_cell4 {
       grid-column: 2/3;
@@ -183,10 +212,16 @@ ul li:hover {
       align-content: center;
       height: 30px;
     }
-    .weather_inner_cell5 {
+    .weather_inner_cell5a {
       align-self: start;
       grid-column: 3/4;
       grid-row: 2/4;
+    }
+    .weather_inner_cell5b {
+      align-self: start;
+      grid-column: 3/4;
+      grid-row: 2/4;
+      display: none;
     }
   }
   .weather_cell2 {
@@ -199,15 +234,33 @@ ul li:hover {
     grid-template-rows: 40px 25px 25px 10px;
     align-items: center;
     padding-left: 10px;
-    .weather_inner_cell1 {
+    .weather_inner_cell1a {
+      display: none;
       grid-column: 1/3;
       grid-row: 1/2;
     }
-    .weather_inner_cell2 {
+    .weather_inner_cell1b {
+      grid-column: 1/3;
+      grid-row: 1/2;
+    }
+    .weather_inner_cell2a {
+      grid-column: 1/2;
+      grid-row: 2/4;
+      display: none;
+    }
+    .weather_inner_cell2b {
       grid-column: 1/2;
       grid-row: 2/4;
     }
-    .weather_inner_cell3 {
+    .weather_inner_cell3a {
+      grid-column: 2/3;
+      grid-row: 2/3;
+      font-weight: 500;
+      text-align: right;
+      padding-right: 15px;
+      display: none;
+    }
+    .weather_inner_cell3b {
       grid-column: 2/3;
       grid-row: 2/3;
       font-weight: 500;
@@ -220,7 +273,10 @@ ul li:hover {
       text-align: right;
       padding-right: 15px;
     }
-    .weather_inner_cell5 {
+    .weather_inner_cell5a {
+      display: none;
+    }
+    .weather_inner_cell5b {
       display: none;
     }
   }
@@ -234,15 +290,33 @@ ul li:hover {
     grid-template-rows: 40px 25px 25px 10px;
     align-items: center;
     padding-left: 10px;
-    .weather_inner_cell1 {
+    .weather_inner_cell1a {
+      grid-column: 1/3;
+      grid-row: 1/2;
+      display: none;
+    }
+    .weather_inner_cell1b {
       grid-column: 1/3;
       grid-row: 1/2;
     }
-    .weather_inner_cell2 {
+    .weather_inner_cell2a {
+      grid-column: 1/2;
+      grid-row: 2/4;
+      display: none;
+    }
+    .weather_inner_cell2b {
       grid-column: 1/2;
       grid-row: 2/4;
     }
-    .weather_inner_cell3 {
+    .weather_inner_cell3a {
+      grid-column: 2/3;
+      grid-row: 2/3;
+      font-weight: 500;
+      text-align: right;
+      padding-right: 15px;
+      display: none;
+    }
+    .weather_inner_cell3b {
       grid-column: 2/3;
       grid-row: 2/3;
       font-weight: 500;
@@ -255,7 +329,10 @@ ul li:hover {
       text-align: right;
       padding-right: 15px;
     }
-    .weather_inner_cell5 {
+    .weather_inner_cell5a {
+      display: none;
+    }
+    .weather_inner_cell5b {
       display: none;
     }
   }
@@ -269,15 +346,33 @@ ul li:hover {
     grid-template-rows: 40px 25px 25px 10px;
     align-items: center;
     padding-left: 10px;
-    .weather_inner_cell1 {
+    .weather_inner_cell1a {
+      grid-column: 1/3;
+      grid-row: 1/2;
+      display: none;
+    }
+    .weather_inner_cell1b {
       grid-column: 1/3;
       grid-row: 1/2;
     }
-    .weather_inner_cell2 {
+    .weather_inner_cell2a {
+      grid-column: 1/2;
+      grid-row: 2/4;
+      display: none;
+    }
+    .weather_inner_cell2b {
       grid-column: 1/2;
       grid-row: 2/4;
     }
-    .weather_inner_cell3 {
+    .weather_inner_cell3a {
+      grid-column: 2/3;
+      grid-row: 2/3;
+      font-weight: 500;
+      text-align: right;
+      padding-right: 15px;
+      display: none;
+    }
+    .weather_inner_cell3b {
       grid-column: 2/3;
       grid-row: 2/3;
       font-weight: 500;
@@ -290,7 +385,10 @@ ul li:hover {
       text-align: right;
       padding-right: 15px;
     }
-    .weather_inner_cell5 {
+    .weather_inner_cell5a {
+      display: none;
+    }
+    .weather_inner_cell5b {
       display: none;
     }
   }
@@ -304,15 +402,33 @@ ul li:hover {
     grid-template-rows: 40px 25px 25px 10px;
     align-items: center;
     padding-left: 10px;
-    .weather_inner_cell1 {
+    .weather_inner_cell1a {
+      grid-column: 1/3;
+      grid-row: 1/2;
+      display: none;
+    }
+    .weather_inner_cell1b {
       grid-column: 1/3;
       grid-row: 1/2;
     }
-    .weather_inner_cell2 {
+    .weather_inner_cell2a {
+      grid-column: 1/2;
+      grid-row: 2/4;
+      display: none;
+    }
+    .weather_inner_cell2b {
       grid-column: 1/2;
       grid-row: 2/4;
     }
-    .weather_inner_cell3 {
+    .weather_inner_cell3a {
+      grid-column: 2/3;
+      grid-row: 2/3;
+      font-weight: 500;
+      text-align: right;
+      padding-right: 15px;
+      display: none;
+    }
+    .weather_inner_cell3b {
       grid-column: 2/3;
       grid-row: 2/3;
       font-weight: 500;
@@ -325,7 +441,10 @@ ul li:hover {
       text-align: right;
       padding-right: 15px;
     }
-    .weather_inner_cell5 {
+    .weather_inner_cell5a {
+      display: none;
+    }
+    .weather_inner_cell5b {
       display: none;
     }
   }
