--- a/style.scss
+++ b/style.scss
@@ -518,13 +518,289 @@ ul li:hover {
     border-color: #ff4343;
   }
 }
-
+.map_box_mobile {
+  position: relative;
+}
 .map_mobile {
   display: block;
-  width: 60%;
+  width: 90%;
+  max-width: 450px;
   margin: auto;
   padding-top: 50px;
   padding-left: 20px;
+}
+.map_box {
+  display: none;
+}
+.location_box_Lerwick {
+  height: 20px;
+  position: absolute;
+  top: 14%;
+  left: 54%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  .city_Lerwick {
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+      sans-serif;
+    font-size: 1.4rem;
+    color: white;
+    background-color: rgba(18, 21, 29, 0.481);
+    height: 20px;
+    display: flex;
+    align-items: center;
+    padding: 5px;
+  }
+  .cityIcon_Lerwick {
+    background-color: rgba(235, 235, 235, 0.694);
+    height: 20px;
+    width: 36px;
+    display: flex;
+    align-items: center;
+    img {
+      height: 36px;
+    }
+  }
+}
+.location_box_Inverness {
+  height: 20px;
+  position: absolute;
+  top: 35%;
+  left: 48%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  .city_Inverness {
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+      sans-serif;
+    font-size: 1.4rem;
+    color: white;
+    background-color: rgba(18, 21, 29, 0.481);
+    height: 20px;
+    display: flex;
+    align-items: center;
+    padding: 5px;
+  }
+  .cityIcon_Inverness {
+    background-color: rgba(235, 235, 235, 0.694);
+    height: 20px;
+    width: 36px;
+    display: flex;
+    align-items: center;
+    img {
+      height: 36px;
+    }
+  }
+}
+.location_box_Edinburgh {
+  height: 20px;
+  position: absolute;
+  top: 44%;
+  left: 56%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  .city_Edinburgh {
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+      sans-serif;
+    font-size: 1.4rem;
+    color: white;
+    background-color: rgba(18, 21, 29, 0.481);
+    height: 20px;
+    display: flex;
+    align-items: center;
+    padding: 5px;
+  }
+  .cityIcon_Edinburgh {
+    background-color: rgba(235, 235, 235, 0.694);
+    height: 20px;
+    width: 36px;
+    display: flex;
+    align-items: center;
+    img {
+      height: 36px;
+    }
+  }
+}
+.location_box_Belfast {
+  height: 20px;
+  position: absolute;
+  top: 56%;
+  left: 39%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  .city_Belfast {
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+      sans-serif;
+    font-size: 1.4rem;
+    color: white;
+    background-color: rgba(18, 21, 29, 0.481);
+    height: 20px;
+    display: flex;
+    align-items: center;
+    padding: 5px;
+  }
+  .cityIcon_Belfast {
+    background-color: rgba(235, 235, 235, 0.694);
+    height: 20px;
+    width: 36px;
+    display: flex;
+    align-items: center;
+    img {
+      height: 36px;
+    }
+  }
+}
+.location_box_Hull {
+  height: 20px;
+  position: absolute;
+  top: 67%;
+  left: 76%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  .city_Hull {
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+      sans-serif;
+    font-size: 1.4rem;
+    color: white;
+    background-color: rgba(18, 21, 29, 0.481);
+    height: 20px;
+    display: flex;
+    align-items: center;
+    padding: 5px;
+  }
+  .cityIcon_Hull {
+    background-color: rgba(235, 235, 235, 0.694);
+    height: 20px;
+    width: 36px;
+    display: flex;
+    align-items: center;
+    img {
+      height: 36px;
+    }
+  }
+}
+.location_box_Manchester {
+  height: 20px;
+  position: absolute;
+  top: 65%;
+  left: 46%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  .city_Manchester {
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+      sans-serif;
+    font-size: 1.4rem;
+    color: white;
+    background-color: rgba(18, 21, 29, 0.481);
+    height: 20px;
+    display: flex;
+    align-items: center;
+    padding: 5px;
+  }
+  .cityIcon_Manchester {
+    background-color: rgba(235, 235, 235, 0.694);
+    height: 20px;
+    width: 36px;
+    display: flex;
+    align-items: center;
+    img {
+      height: 36px;
+    }
+  }
+}
+.location_box_Cardiff {
+  height: 20px;
+  position: absolute;
+  top: 79%;
+  left: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  .city_Cardiff {
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+      sans-serif;
+    font-size: 1.4rem;
+    color: white;
+    background-color: rgba(18, 21, 29, 0.481);
+    height: 20px;
+    display: flex;
+    align-items: center;
+    padding: 5px;
+  }
+  .cityIcon_Cardiff {
+    background-color: rgba(235, 235, 235, 0.694);
+    height: 20px;
+    width: 36px;
+    display: flex;
+    align-items: center;
+    img {
+      height: 36px;
+    }
+  }
+}
+.location_box_London {
+  height: 20px;
+  position: absolute;
+  top: 80%;
+  left: 72%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  .city_London {
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+      sans-serif;
+    font-size: 1.4rem;
+    color: white;
+    background-color: rgba(18, 21, 29, 0.481);
+    height: 20px;
+    display: flex;
+    align-items: center;
+    padding: 5px;
+  }
+  .cityIcon_London {
+    background-color: rgba(235, 235, 235, 0.694);
+    height: 20px;
+    width: 36px;
+    display: flex;
+    align-items: center;
+    img {
+      height: 36px;
+    }
+  }
+}
+.location_box_StHelier {
+  height: 20px;
+  position: absolute;
+  top: 97%;
+  left: 68%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  .city_StHelier {
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+      sans-serif;
+    font-size: 1.4rem;
+    color: white;
+    background-color: rgba(18, 21, 29, 0.481);
+    height: 20px;
+    display: flex;
+    align-items: center;
+    padding: 5px;
+  }
+  .cityIcon_StHelier {
+    background-color: rgba(235, 235, 235, 0.694);
+    height: 20px;
+    width: 36px;
+    display: flex;
+    align-items: center;
+    img {
+      height: 36px;
+    }
+  }
 }
 .map {
   display: none;
@@ -631,5 +907,282 @@ ul li:hover {
     width: 100%;
     padding-top: 50px;
     padding-left: 20px;
+  }
+  .map_box {
+    display: initial;
+    position: relative;
+  }
+  .map_box_mobile {
+    display: none;
+  }
+  .location_box_Lerwick {
+    height: 20px;
+    position: absolute;
+    top: 14%;
+    left: 24%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    .city_Lerwick {
+      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
+      font-size: 1.4rem;
+      color: white;
+      background-color: rgba(18, 21, 29, 0.481);
+      height: 20px;
+      display: flex;
+      align-items: center;
+      padding: 5px;
+    }
+    .cityIcon_Lerwick {
+      background-color: rgba(235, 235, 235, 0.694);
+      height: 20px;
+      width: 36px;
+      display: flex;
+      align-items: center;
+      img {
+        height: 36px;
+      }
+    }
+  }
+  .location_box_Inverness {
+    height: 20px;
+    position: absolute;
+    top: 38%;
+    left: 24%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    .city_Inverness {
+      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
+      font-size: 1.4rem;
+      color: white;
+      background-color: rgba(18, 21, 29, 0.481);
+      height: 20px;
+      display: flex;
+      align-items: center;
+      padding: 5px;
+    }
+    .cityIcon_Inverness {
+      background-color: rgba(235, 235, 235, 0.694);
+      height: 20px;
+      width: 36px;
+      display: flex;
+      align-items: center;
+      img {
+        height: 36px;
+      }
+    }
+  }
+  .location_box_Edinburgh {
+    height: 20px;
+    position: absolute;
+    top: 48%;
+    left: 24%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    .city_Edinburgh {
+      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
+      font-size: 1.4rem;
+      color: white;
+      background-color: rgba(18, 21, 29, 0.481);
+      height: 20px;
+      display: flex;
+      align-items: center;
+      padding: 5px;
+    }
+    .cityIcon_Edinburgh {
+      background-color: rgba(235, 235, 235, 0.694);
+      height: 20px;
+      width: 36px;
+      display: flex;
+      align-items: center;
+      img {
+        height: 36px;
+      }
+    }
+  }
+  .location_box_Belfast {
+    height: 20px;
+    position: absolute;
+    top: 60%;
+    left: 16%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    .city_Belfast {
+      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
+      font-size: 1.4rem;
+      color: white;
+      background-color: rgba(18, 21, 29, 0.481);
+      height: 20px;
+      display: flex;
+      align-items: center;
+      padding: 5px;
+    }
+    .cityIcon_Belfast {
+      background-color: rgba(235, 235, 235, 0.694);
+      height: 20px;
+      width: 36px;
+      display: flex;
+      align-items: center;
+      img {
+        height: 36px;
+      }
+    }
+  }
+  .location_box_Hull {
+    height: 20px;
+    position: absolute;
+    top: 72%;
+    left: 34%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    .city_Hull {
+      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
+      font-size: 1.4rem;
+      color: white;
+      background-color: rgba(18, 21, 29, 0.481);
+      height: 20px;
+      display: flex;
+      align-items: center;
+      padding: 5px;
+    }
+    .cityIcon_Hull {
+      background-color: rgba(235, 235, 235, 0.694);
+      height: 20px;
+      width: 36px;
+      display: flex;
+      align-items: center;
+      img {
+        height: 36px;
+      }
+    }
+  }
+  .location_box_Manchester {
+    height: 20px;
+    position: absolute;
+    top: 70%;
+    left: 20%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    .city_Manchester {
+      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
+      font-size: 1.4rem;
+      color: white;
+      background-color: rgba(18, 21, 29, 0.481);
+      height: 20px;
+      display: flex;
+      align-items: center;
+      padding: 5px;
+    }
+    .cityIcon_Manchester {
+      background-color: rgba(235, 235, 235, 0.694);
+      height: 20px;
+      width: 36px;
+      display: flex;
+      align-items: center;
+      img {
+        height: 36px;
+      }
+    }
+  }
+  .location_box_Cardiff {
+    height: 20px;
+    position: absolute;
+    top: 81%;
+    left: 22%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    .city_Cardiff {
+      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
+      font-size: 1.4rem;
+      color: white;
+      background-color: rgba(18, 21, 29, 0.481);
+      height: 20px;
+      display: flex;
+      align-items: center;
+      padding: 5px;
+    }
+    .cityIcon_Cardiff {
+      background-color: rgba(235, 235, 235, 0.694);
+      height: 20px;
+      width: 36px;
+      display: flex;
+      align-items: center;
+      img {
+        height: 36px;
+      }
+    }
+  }
+  .location_box_London {
+    height: 20px;
+    position: absolute;
+    top: 82%;
+    left: 35%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    .city_London {
+      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
+      font-size: 1.4rem;
+      color: white;
+      background-color: rgba(18, 21, 29, 0.481);
+      height: 20px;
+      display: flex;
+      align-items: center;
+      padding: 5px;
+    }
+    .cityIcon_London {
+      background-color: rgba(235, 235, 235, 0.694);
+      height: 20px;
+      width: 36px;
+      display: flex;
+      align-items: center;
+      img {
+        height: 36px;
+      }
+    }
+  }
+  .location_box_StHelier {
+    height: 20px;
+    position: absolute;
+    top: 97%;
+    left: 33%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    .city_StHelier {
+      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
+      font-size: 1.4rem;
+      color: white;
+      background-color: rgba(18, 21, 29, 0.481);
+      height: 20px;
+      display: flex;
+      align-items: center;
+      padding: 5px;
+    }
+    .cityIcon_StHelier {
+      background-color: rgba(235, 235, 235, 0.694);
+      height: 20px;
+      width: 36px;
+      display: flex;
+      align-items: center;
+      img {
+        height: 36px;
+      }
+    }
   }
 }
